--- a/Module 1/2. Web Architecture.md
+++ b/Module 1/2. Web Architecture.md
@@ -8,6 +8,7 @@
 ### 1-1-2. Thick Client
 - Thick client holds all or some part of the business logic. These are the **two-tier** applications.
 - The typical examples of fat clients are utility apps, online games, and so on.
+- Implemented 1) when we need to minimize the network latency 2) When we need to reduce the bandwidth consumption iin the client server communication, for a smooth user experience.
 
 # 2. Server (application server)
 - The primary task of a web server is to receive the requests from the client and provide the response after executing the business logic based on the request parameters received from the client.
@@ -20,3 +21,61 @@
 - **No request means no response!!**
 
 ## 3-1. HTTP Protocol
+- request-response protocol
+- stateless
+
+## 3-2. REST API and API Endpoints
+- In n-tier web applications, every client has to hit a REST endpoint.
+
+
+# 4. REST API
+- REST stands for Representational State Transfer.
+- A REST API is an API implementation that adheres to the REST architectural constraints. It acts as an interface. The communication between the client and the server happens over HTTP. 
+
+## 4-1. Decoupled
+- "the clients and the backend are decoupled" = the client code does not affect the functionality of the backend service.
+
+## 4-2. API Gateway
+- The REST-API acts as a gateway or a single-entry point into the system.
+
+# 5. HTTP PULL vs HTTP PUSH
+- Two modes of data transfer between the client and server: HTTP PUSH and HTTP PULL
+
+## 5-1. HTTP PULL
+- The client pulls the data from the server whenever required. It keeps doing this over and over to fetch the latest data.
+- This is not ideal and a waste of resources and it may bring down the server by excessive pulls.
+- AJAX(Asynchronous JavaScript and XML) to send requests to the server in both the HTTP PULL and the HTTP PUSH mechanism.
+
+### 5-1-1. Two Ways of Pulling/Fetching 
+1) HTTP GET request to the server manually by triggering an event on the user interface by clicking a button or interacting with any other element on the web page.
+2) Pulling data dynamically at regular intervals using AJAX without any human intervention.
+
+### 5-1-2. AJAX
+- AJAX is used for adding asynchronous behavior to the web page.
+- Dynamic technique of requesting information from the server at regular intervals is known as polling.
+- AJAX polling and AJAX long polling is not same. AJAX polling is the HTTP Pull mechanism and AJAX Long polling is a hybrid between the HTTP Push and the Pull, based on the BAYEUX protocol.
+
+## 5-2. HTTP PUSH
+- After the client's first request to the server, the server keeps pushing the new updates to the client whenever they are available.
+- This saves a lot of network bandwidth and cuts down the load on ther server.
+- This is also known as a callback.
+- example:
+    - Ajax Long polling
+    - Web Sockets
+    - HTML5 Event Source
+    - Message Queues
+    - Streaming over HTTP
+
+### 5-2-1. Time To Live (TTL)
+- If the client doesn't receive a response from the server within the TTL, the browser kills the connection.
+- Open connections consume resources, and there is a limit to the number of open connections a server can handle at one point. If the connections don’t close and new ones are introduced regularly over time, the server will run out of memory.
+
+### 5-2-2. Persistent Connection
+- A persistent connection is a network connection between the client and the server that remains open for future requests and responses, as opposed to being closed after a single communication.
+- This facilitates HTTP PUSH-based communication between the client and the server.
+- Persistent connections consume a lot of resources compared to the HTTP PULL behavior. Good for a browser-based multiplayer game. 
+- Long opened connections can be implemented by multiple techniques such as AJAX Long Polling, Web Sockets, Server-Sent Events, etc.
+
+### 5-2-3. Heartbeat Interceptors
+- The persistent connection can stay open with the help of Heartbeat Interceptors.
+- These are just blank request responses between the client and the server to prevent the browser from killing the connection.
